# py-bot-command-parser

./: README.md  pyproject.toml  pyrightconfig.json
bot_command_parser/: converters.py  parsers.py
examples/: cli_bot.py
tests/: test_basic.py
